# sp-droid

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  readme.txt  temp.md  temp2.md
Imperator Rome related/2.0 Crash fix/: fix.txt
Projects/C++/2learnWebGPU/: .gitignore  CMakeLists.txt  libraries.rar  main.cpp  webgpu-utils.cpp  webgpu-utils.h
Projects/C++/3leetcodeTop150/: 1.cpp  10.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
Projects/C++/4sdl3/: README.md
Projects/I:Rome crashfix/: empty.txt
Projects/I:Rome-crashfix/: fix.txt
Projects/JavaScript/10reduction/: compute.wgsl  index.js
Projects/JavaScript/10reductionSumMinArgmin/: compute.wgsl  index.html
Projects/JavaScript/11reductionSumMinArgmin/: compute.wgsl  index.js
Projects/JavaScript/13DLAwebGPU/: compute.wgsl  default.wgsl  index.html  index.js
Projects/JavaScript/14tournamentSystem/: index.html  styles.css  test.js  tournament.js
Projects/JavaScript/1helloworld/: index.html  sketch.js
Projects/JavaScript/3interpolating/: arr3D.js  index.html  provinces.csv  sketch.js
Projects/JavaScript/3valiLibUI/: package-lock.json  package.json
Projects/JavaScript/4interpolating/: arr3D.js  convertImage.py  sketch.js
Projects/JavaScript/4webGLshaderTest/: shader.frag  shader.vert  sketch.js
Projects/JavaScript/5codelabWebGPU/: index.js
Projects/JavaScript/6rainbowSmokeP5/: index.html  sketch.js
Projects/JavaScript/7rainbowSmokeWebGPU/: compute.wgsl  default.wgsl  index.html  index.js
Projects/JavaScript/7reactionTime/: sketch.js
Projects/JavaScript/8rainbowSmokeWebGPU2/: compute.wgsl  default.wgsl  index.html  index.js
Projects/JavaScript/8reduction/: compute.wgsl  index.js
Projects/JavaScript/9reactionTime/: index.html  sketch.js
Projects/Python/10tinylm/: .gitignore  README.md  pyproject.toml
Projects/Python/10tinylm/input/configs/: shakespeare.toml  tinystories.toml
Projects/Python/10tinylm/src/tinylm/: __init__.py  cli.py  config.py  data.py  eval_assets.py  inference.py  lm_eval_adapter.py  model.py  prepare.py  reporting.py  telemetry.py  tokenizer.py  training.py  validation.py
Projects/Python/10tinylm/tests/: test_cli.py  test_inference.py
Projects/Python/9andrejkarpathy/: 1.1_tokenize_character.ipynb  2.0_train_LM2026.ipynb  character_tokenizer.py  pyproject.toml  tokenizer.ipynb  train_LM.ipynb  train_LM2026.ipynb  train_bigramLM.ipynb
Projects/Python/9andrejkarpathy/datasets/: chosen_dataset.info
Projects/Python/9andrejkarpathy/results/: shakespeare.txt  tiny-stories.txt
Projects/flowmapGen/: README.md  flowmap.ipynb  flowmapGen.rar
Projects/watercolorGen/: README.md
Recipes/: 00Índice.md  Sopa de pollo.md
Recipes/ongoing/: 3-Ingredient Yogurt Marinated Chicken _ Kitchn.txt  Italian Macaroni 1800s.txt  Pechugas de pollo en salsa de cebolla - Cocina Casera y Facil.mht  alitasHorno.txt  amaretti.txt  beef bourguignon.txt  brazilianlemonade.txt  butter.txt  chocolate cookies.txt  honey garlic chicken.url  lazos.txt  mayo cake.txt  mushroom risotto.txt  panettone.txt  papas estilo paquete.txt  pesto.txt  pumpkin sheesh.txt  restoring bread.txt  tarta sacher.url  tiramisu.txt  tortilla.txt  vegetables stock.txt  ~$ecetas.docx
flowcharts/: Colonization.drawio  Population.drawio  UPM A - Program Structure.drawio  UPM-A Organization Chart.drawio  Untitled Diagram.drawio  empty.txt  errorbias.drawio  ongoing.drawio  religions
libraries/: myML.py
(+731 files in other folders)
