[project]
name = "9andrejkarpathy"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "InquirerPy>=0.3.4",
    "datasets>=4.4.0",
    "lm-eval==0.4.12",
    "numpy>=2.4.4",
    "torch>=2.12.1",
    "tqdm>=4.66.5",
]

[project.scripts]
tinylm = "tinylm.cli:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tinylm"]

[tool.uv.sources]
torch = { index = "pytorch-cu132" }

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
