[project]
name = "9andrejkarpathy"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel==6.30.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "nbclient>=0.11.0",
    "numpy>=2.4.4",
    "papermill>=2.7.0",
    "torch>=2.12.1",
    "tqdm>=4.66.5",
]

[tool.uv.sources]
torch = { index = "pytorch-cu132" }

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
